# ai-review-bot

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: self-review.yml
docs/: architecture.md
evals/: notes.md  runner.py
evals/cassettes/: pr3_planted_bugs.json  pr5_readme_clean.json
src/acrobot/: __main__.py  config.py  schemas.py  telemetry.py
src/acrobot/diff/: chunker.py  filters.py
src/acrobot/evalkit/: cassette.py
src/acrobot/github/: pr.py  reviews.py
src/acrobot/llm/: gemini_provider.py  provider.py
src/acrobot/llm/prompts/: triage.md
src/acrobot/pipeline/: fingerprint.py  postprocess.py  review.py  triage.py
src/reviewbot/: __main__.py  config.py  ratelimit.py  telemetry.py
src/reviewbot/diff/: chunker.py  filters.py  parser.py
src/reviewbot/github/: client.py  pr.py  reviews.py
src/reviewbot/llm/: gemini_provider.py  provider.py
src/reviewbot/llm/prompts/: review_system.md
src/reviewbot/pipeline/: fingerprint.py  postprocess.py  review.py  triage.py
tests/: test_chunker_postprocess.py  test_core.py  test_error_paths.py  test_evalkit.py  test_review_pass.py  test_triage.py
