[project]
name = "acrobot"
version = "0.1.0"
description = "AI code review bot: GitHub Action that reviews PR diffs with an LLM and posts inline comments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.16",
    "httpx>=0.27",
    "unidiff>=0.7.5",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acrobot"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["acrobot"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
